--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
     "react": "^18",
